--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="left-header">
           <div class="h-shape"></div>
           <div class="image">
-            <img src="C:\Users\sharo\Downloads\Portfolio-main\Portfolio-main\images\WhatsApp Image 2025-04-02 at 17.25.53.jpeg" alt="" />
+            <img src="C:\Users\sharo\OneDrive\Pictures\Sharon.jpeg" />
           </div>
         </div>
         <div class="right-header">
