--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       success and helping achieve its goals. I thrive in environments encouraging continuous improvement and am excited to make a meaningful impact. 
 			I have interest domain in Machine learning , Artificial Intelligence and Deep Learning and NLP have some hands on project with the help of different technologies. </p>
           <div class="btn-con">
-            <a href="file:///C:/Users/sharo/Downloads/Sharon-Philip-FlowCV-Resume-20250622.pdf" target="_blank" class="main-btn">
+            <a href="https://drive.google.com/file/d/1ZEP88Z-NCPHguj0igyiAEtQh38LTxT0G/view?usp=sharing" target="_blank" class="main-btn">
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -77,7 +77,7 @@
               During my academics I had projects in Data Science, Machine learning, Software Testing, Deep Learning, Artificial Intelligence and Programming which help me to in gaining skills in mentioned platform.
             </p>
             <div class="btn-con">
-              <a href="file:///C:/Users/sharo/Downloads/Sharon-Philip-FlowCV-Resume-20250622.pdf" target="_blank" class="main-btn">
+              <a href="https://drive.google.com/file/d/1ZEP88Z-NCPHguj0igyiAEtQh38LTxT0G/view?usp=sharing" target="_blank" class="main-btn">
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
