--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             <div class="pportfolios">
                 <div class="pportfolio-item">
                     <div class="image">
-                        <img src="C:\Users\sharo\OneDrive\Pictures\sict-computer-education-navi-mumbai-computer-training-institutes-vt081r4zip.avif" alt=""/>
+                        <img src="https://www.justdial.com/Navi-Mumbai/SICT-Computer-Education-Behind-St-Bus-Depot-Forest-Colony/022PXX22-XX22-180926141536-S5M4_BZDET/gallery?tab=all&pselect=180862179&template=2&ncatid=10988903&mncatname=MSCIT+Training+Institutes&bd=1&isOpenAbd=&abd_btn=&vrsn=3.0&sname=&scat=&term=&area=Panvel+City&search=SICT-Computer-Education-Behind-St-Bus-Depot-Forest-Colony&abd_heading=" alt=""/>
                     </div>
                     <div class="hover-items">
                         <h3>Certificate in Computer </h3>
