--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="left-header">
           <div class="h-shape"></div>
           <div class="image">
-            <img src="C:\Users\sharo\OneDrive\Pictures\Sharon.jpeg" />
+            <img src="https://drive.google.com/file/d/1XvQhsCA5Z24ELM5Hk6v599nfCNNL8gsO/view?usp=sharing" />
           </div>
         </div>
         <div class="right-header">
