--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </div>
         </div>
         <div class="right-header">
-          <h1 class="name">Praise the Lord   I'm <span> Sharon Philip </span></h1>
-          <span class="name">An Aspiring / Python / Tableau / M.l / A.I / D.L / NLP.</span>
+          <h1 class="name"> I'm <span> Sharon Philip </span></h1>
+          <span class="name">An Aspiring Data Analyst  & Front-End Web deveploer / Python / Tableau / M.l / A.I / D.L / NLP.</span>
           <p>
             <strong>Hey Guys!</strong> 
             
