--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         </div>
         <div class="right-header">
           <h1 class="name"> I'm <span> Sharon Philip </span></h1>
-          <span class="name">An Aspiring Data Analyst & Front-End Web deveploer / Python / Tableau / M.l / A.I / D.L / NLP.</span>
+          <span class="name">An Aspiring Data Analyst & Front-End developer, Python, Tableau, Machine.Learning, Artificial.Intelligence, Deep.Learning / NLP.</span>
           <p>
             <strong>Hey Guys!</strong> 
             
 			My Name Is Sharon Philip. 
 			I Completed my graduation with a degree in BSc Computer Science . 
 			I am currently Pursuing Master of Science in Information Technology
-		  I am a dedicated and flexible professional actively looking for an opportunity to be part of a dynamic team. 
-      I am passionate about learning and personal growth, and I am eager to apply my skills in new and challenging 
-      situations. With a strong focus on teamwork and problem-solving, I am committed to contributing to the organization's
-      success and helping achieve its goals. I thrive in environments encouraging continuous improvement and am excited to make a meaningful impact. 
+		        I am a dedicated and flexible professional actively looking for an opportunity to be part of a dynamic team. 
+                        I am passionate about learning and personal growth, and I am eager to apply my skills in new and challenging 
+                        situations. With a strong focus on teamwork and problem-solving, I am committed to contributing to the organization's
+                        success and helping achieve its goals. I thrive in environments encouraging continuous improvement and am excited to make a meaningful impact. 
 			I have interest domain in Machine learning , Artificial Intelligence and Deep Learning and NLP have some hands on project with the help of different technologies. </p>
           <div class="btn-con">
             <a href="https://drive.google.com/file/d/1ZEP88Z-NCPHguj0igyiAEtQh38LTxT0G/view?usp=sharing" target="_blank" class="main-btn">
