--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
           <p>
             <strong>Hey Guys!</strong> 
             
-			My Name Is Sharon Philip. 
-			I Completed my graduation with a degree in BSc Computer Science . 
-			I am currently Pursuing Master of Science in Information Technology
-		        I am a dedicated and flexible professional actively looking for an opportunity to be part of a dynamic team. 
-                        I am passionate about learning and personal growth, and I am eager to apply my skills in new and challenging 
-                        situations. With a strong focus on teamwork and problem-solving, I am committed to contributing to the organization's
-                        success and helping achieve its goals. I thrive in environments encouraging continuous improvement and am excited to make a meaningful impact. 
-			I have interest domain in Machine learning , Artificial Intelligence and Deep Learning and NLP have some hands on project with the help of different technologies. </p>
+			Hello! I’m Sharon Philip, a passionate and adaptable tech enthusiast with a solid foundation in Computer Science and currently pursuing a Master’s in Information Technology.
+
+I’m driven by curiosity and a constant desire to learn. My interests span across Machine Learning, Artificial Intelligence, Deep Learning, and Natural Language Processing (NLP) — domains where I’ve also applied hands-on skills through academic and personal projects.
+
+I thrive in collaborative environments, love solving complex problems, and am always seeking new challenges that push me to grow. My goal is to contribute meaningfully to innovative projects and make a positive impact through technology. </p>
           <div class="btn-con">
             <a href="https://drive.google.com/file/d/1ZEP88Z-NCPHguj0igyiAEtQh38LTxT0G/view?usp=sharing" target="_blank" class="main-btn">
               <span class="btn-text">Download CV</span>
@@ -315,7 +312,7 @@
         <div class="tl-icon"><i class="fas fa-graduation-cap"></i></div>
         <p class="tl-duration">2020</p>
         <h5>VHSE (Civil Construction Technology)</h5>
-        <p>Thadicadu High School, VHSS</p>
+        <p>Thadicadu High School, VHSE</p>
       </div>
 
       <div class="timeline-item">
