--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio  | Sharon Philip </title>
+    <title>Portfolio  | SHARON PHILIP </title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,16 +29,19 @@
           </div>
         </div>
         <div class="right-header">
-          <h1 class="name"> I'm <span> Sharon Philip </span></h1>
-          <span class="name">An Aspiring Data Analyst & Front-End developer, Python, Tableau, Machine.Learning, Artificial.Intelligence, Deep.Learning / NLP.</span>
+          <h1 class="name"> I'm <span> Sharon-Philip-.</span></h1>
+          <span class="name">An Aspiring / Python / Tableau / M.l / A.I / D.L / NLP.</span>
           <p>
             <strong>Hey Guys!</strong> 
             
-			Hello! I’m Sharon Philip, a passionate and adaptable tech enthusiast with a solid foundation in Computer Science and currently pursuing a Master’s in Information Technology.
-
-I’m driven by curiosity and a constant desire to learn. My interests span across Machine Learning, Artificial Intelligence, Deep Learning, and Natural Language Processing (NLP) — domains where I’ve also applied hands-on skills through academic and personal projects.
-
-I thrive in collaborative environments, love solving complex problems, and am always seeking new challenges that push me to grow. My goal is to contribute meaningfully to innovative projects and make a positive impact through technology. </p>
+			My Name Is Sharon Philip. 
+			I Completed my graduation with a degree in BSc Computer Science . 
+			I am currently Pursuing Master of Science in Information Technology
+		  I am a dedicated and flexible professional actively looking for an opportunity to be part of a dynamic team. 
+      I am passionate about learning and personal growth, and I am eager to apply my skills in new and challenging 
+      situations. With a strong focus on teamwork and problem-solving, I am committed to contributing to the organization's
+      success and helping achieve its goals. I thrive in environments encouraging continuous improvement and am excited to make a meaningful impact. 
+			I have interest domain in Machine learning , Artificial Intelligence and Deep Learning and NLP have some hands on project with the help of different technologies. </p>
           <div class="btn-con">
             <a href="https://drive.google.com/file/d/1ZEP88Z-NCPHguj0igyiAEtQh38LTxT0G/view?usp=sharing" target="_blank" class="main-btn">
               <span class="btn-text">Download CV</span>
@@ -312,7 +315,7 @@ I thrive in collaborative environments, love solving complex problems, and am al
         <div class="tl-icon"><i class="fas fa-graduation-cap"></i></div>
         <p class="tl-duration">2020</p>
         <h5>VHSE (Civil Construction Technology)</h5>
-        <p>Thadicadu High School, VHSE</p>
+        <p>Thadicadu High School, VHSS</p>
       </div>
 
       <div class="timeline-item">
