--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> My Portfolio  | Sharon Philip </title>
+    <title>Portfolio  | Sharon Philip </title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="right-header">
-          <h1 class="name"> I'm <span> Sharon Philip .</span></h1>
+          <h1 class="name"> I'm <span> Sharon Philip </span></h1>
           <span class="name">An Aspiring Data Analyst & Front-End developer, Python, Tableau, Machine.Learning, Artificial.Intelligence, Deep.Learning / NLP.</span>
           <p>
             <strong>Hey Guys!</strong> 
@@ -312,7 +312,7 @@ I thrive in collaborative environments, love solving complex problems, and am al
         <div class="tl-icon"><i class="fas fa-graduation-cap"></i></div>
         <p class="tl-duration">2020</p>
         <h5>VHSE (Civil Construction Technology)</h5>
-        <p>Thadicadu High School, VHSS</p>
+        <p>Thadicadu High School, VHSE </p>
       </div>
 
       <div class="timeline-item">
